Vaadin dependencies added to the project